# rfp-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  project_tree_structure.md  pyproject.toml  spec.md  spec_additional.md
.claude/: settings.local.json
active_plans/bid-assessment-pivot/: bid-assessment-pivot_master_plan.md
active_plans/rfp_assistant/: rfp_assistant_master_plan.md
common/: __init__.py  db.py  pyproject.toml
common/common/: config.py  embedder.py  logging.py  tenancy.py
common/tests/: test_tenancy.py
frontend/: Dockerfile  middleware.ts  next.config.js  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/components/: AnswerPane.tsx  AppShell.tsx  ChatBox.tsx  CitationsPanel.tsx  ModeSelector.tsx
frontend/lib/: api.ts  format.d.ts  format.mjs  useAssessmentStream.ts
how_to/: .env.example  check_env.sh  commit.sh  create_env.sh  maistro
how_to/guides/: claude_md_setup.md  code_review.md  orchestrator.md  pipeline.md  plan_review.md  plan_tool.md  reference.md  research.md  setup.md  workflow.md
how_to/orchestrator_v3/: __init__.py  __main__.py  approval.py  artifacts.py  bootstrap.py  cli.py  config.py  display.py  env_checks.py  loop.py  plan_lint.py  plan_tool.py  postmortem.py  preflight.py  prompts.py  reflection.py  requirements.txt  research.py  research_prompts.py  (+4 more)
migrations/: README.md  env.py
reviews/: rfp_assistant_campaign.json  rfp_assistant_orchestrator_state.json  rfp_assistant_orchestrator_state.json.bak  rfp_assistant_p0_t1_state.json  rfp_assistant_p0_t1_state.json.bak  rfp_assistant_p0_t2_state.json  rfp_assistant_p0_t3_state.json  rfp_assistant_p0_t4_state.json  rfp_assistant_p1_t1_state.json  rfp_assistant_p1_t2_state.json  rfp_assistant_p1_t3_state.json  rfp_assistant_p1_t4_state.json  rfp_assistant_p1_t5_state.json  rfp_assistant_p2_t1_state.json  rfp_assistant_p2_t2_state.json  rfp_assistant_p2_t3_state.json  rfp_assistant_p2_t4_state.json  rfp_assistant_p2_t5_state.json  rfp_assistant_p3_t1_state.json  rfp_assistant_p3_t2_state.json  rfp_assistant_p3_t3_state.json  rfp_assistant_p3_t4_state.json  rfp_assistant_p4_t1_state.json  rfp_assistant_p4_t2_state.json  rfp_assistant_p4_t3_state.json  rfp_assistant_p4_t4_state.json  rfp_assistant_p4_t5_state.json  rfp_assistant_p5_t1_state.json  rfp_assistant_p5_t2_state.json  rfp_assistant_p5_t3_state.json  rfp_assistant_p5_t4_state.json  rfp_assistant_p5_t5_state.json  rfp_assistant_p5_t6_state.json  rfp_assistant_p6_t1_state.json  rfp_assistant_p6_t2_state.json  rfp_assistant_p6_t3_state.json  rfp_assistant_p6_t4_state.json  rfp_assistant_p7_t1_state.json  rfp_assistant_p7_t2_state.json  rfp_assistant_p7_t3_state.json  (+120 more)
scripts/: embed_chunks.py  install_deps.py  seed_bid_assessment_demo.py  seed_demo.py  test_workflows.py
services/adapters/: Dockerfile  base.py  claude.py  gemini.py  main.py  ollama.py  openai_adapter.py  pyproject.toml
services/adapters/copilot/: Dockerfile  __init__.py  adaptive_card.py  auth.py  handler.py  main.py  manifest.json  requirements.txt
services/adapters/copilot/tests/: test_copilot_adapter.py
services/analytics-service/: Dockerfile  agents.py  main.py  patterns.py  pyproject.toml
services/content-service/: Dockerfile  agents.py  chunker.py  ingestion.py  main.py  parser.py  pyproject.toml  schemas.py  snippets.py  typed_entities.py
services/content-service/tests/: test_chunker.py  test_parser.py  test_rfp_extraction.py
services/orchestrator/: Dockerfile  agents.py  main.py  pipeline.py  prompts.py  pyproject.toml
services/orchestrator/assessment/: agents_bestfit.py  agents_compliance.py  agents_eligibility.py  agents_risk.py  agents_summary.py  pipeline.py  schemas.py  stream.py
services/orchestrator/tests/: test_agent_pipeline.py  test_prompts.py
(+170 files in other folders)
