[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
    "sentence-transformers>=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["common"]
