[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adapters"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "anthropic>=0.30",
    "google-generativeai>=0.7",
    "openai>=1.0",
    "httpx>=0.27",
    "common",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "black>=24", "pytest>=8", "pytest-asyncio>=0.23"]
